[package]
name = "MuscleSore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.*"
bevy_mod_picking = "0.12.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
